--- a/Loading.html
+++ b/Loading.html
@@ -23,14 +23,14 @@
             </svg>
         </div>
         <div class="logoText">
-            <h1>Red Titles</h1>
+            <h1>Reel Time</h1>
         </div>
     </div>
 
     <div class="presentationPage">
         <div class="members">
             <div class="title">
-                <h1>Team Behind Red Titles</h1>
+                <h1>Team Behind Reel Time</h1>
                 <small>You will be redirected to the site in <span id="number">5</span> seconds</small>
             </div>
             <div class="imageBar">
