--- a/PresentationPage.html
+++ b/PresentationPage.html
@@ -12,7 +12,7 @@
         <iframe src="Loading.html" width="100%" height="100%"></iframe>
     </div>
     <div class="main">
-        <main>
+        <main style="margin-top: 0px;">
             <h1>Hello World</h1>
         </main>
     </div>
